grammar.js
    source_file: $ => repeat($._top_level_statement),

    _top_level_statement: $ => choice(
      $._statement,
      $.hotstring,
      $.remap,
      $.hotkey,
    ),

    line_comment: $ => prec(PREC.COMMENT, choice(token(';'), token(/;[^@\r\n][^\r\n]*/))),

    _single_expression: $ => choice(
      $._pairwise_operation,
      $._literal,
      $.identifier,
      $.dynamic_identifier,
      $._primary_expression,
      $.verbal_not_operation,
      $.dereference_operation,
      $.varref_operation,
      // The maybe operator (?) is a postfix marker on an operand. It is permitted
      // in expression position generally so that optional chains (x?.y) and
      // alpha.29 short-circuiting (f()? as an operand of any operator) compose
      // naturally. Where it is actually legal is contextual; we are permissive.
      $.optional_expression,
    ),

    expression_sequence: $ => prec(PREC.COMMA, seq(
      $._single_expression,
      repeat(seq(',', $._single_expression)),
    )),

    // A `local`/`global`/`static` declaration list: `static a := 1, b := 2, c`. Every name in
    // the list takes the declared scope, so each gets its own declarator rather than the list
    // decaying into an expression_sequence in which only the first name is marked.
    //
    // The list may be empty: a bare `global` or `static` as a function's first line selects
    // assume-global / assume-static mode. A bare `local` is *not* legal ("Unexpected
    // declaration"), nor is either keyword anywhere but the first line - both contextual, so
    // both are permitted here.
    //
    // FIXME some declarations are contextually illegal - you can't delcare local variables in the auto-execute
    // section, for example. We may not be able to detect those with pure grammar rules
    variable_declaration: $ => prec.right(seq(
      field('scope', $.scope_identifier),
      optional(seq(
        $.variable_declarator,
        repeat(seq(',', $.variable_declarator)),
      )),
    )),

    // Not restricted to `:=`: `global w += 1` is legal and means "declare w global, then
    // apply +=" (verified against 2.0.26), so any assignment operator may follow the name.
    variable_declarator: $ => seq(
      field('name', $.identifier),
      optional(seq(
        field('operator', $.assignment_operator),
        field('value', $._single_expression),
      )),
    ),

    assignment_operation: $ => prec.left(PREC.ASSIGNMENT, seq(
      field('left', $._single_expression),
      field('operator', $.assignment_operator),
      field('right', $._single_expression),
    )),

    dereference_operation: $ => prec.left(PREC.DEREFERENCE, seq(
      '%', field('operand', $._single_expression), '%',
    )),

    // Maybe more accurately a "reference operation", since in v2.1 these can produce PropRefs
    // or invoke __ref
    additive_operation: $ => prec.left(PREC.ADDITIVE, seq(
      field('left', $._single_expression),
      field('operator', choice('+', '-')),
      field('right', $._single_expression),
    )),

    multiplicative_operation: $ => prec.left(PREC.MULTIPLICATIVE, seq(
      field('left', $._single_expression),
      field('operator', choice('*', '/', '//')),
      field('right', $._single_expression),
    )),

    member_access: $ => prec(PREC.MEMBER_ACCESS, seq(
      field('object', $._single_expression),
      '.',
      field('member', choice(
        $.identifier,
        alias($._numeric_property_name, $.identifier),
        $.dereference_operation,
        alias($._member_dynamic_identifier, $.dynamic_identifier),
      )),
    )),

    // A combination of identifiers and derefs, such as `a%b%`
    // Derefs can follow other derefs, like obj.%a%%b%
    // All parts must be contiguous (no whitespace) — `a %b%` is implicit concatenation, not a dynamic identifier
    // Adapted from: https://github.com/Descolada/keysharp/blob/master/Keysharp.Core/Scripting/Parser/Antlr/MainParser.g4#L480
    dynamic_identifier: $ => prec.right(choice(
      seq(
        $.identifier,
        $.dereference_operation,
        repeat(choice(
          $.identifier,
          // Non-leading parts *can* start with a digit, e.g. `%var%2trailingtext`
          alias($._numeric_property_name, $.identifier),
          $.dereference_operation)),
      ),
      seq(
        $.dereference_operation,
        repeat1(choice(
          $.identifier,
          alias($._numeric_property_name, $.identifier),
          $.dereference_operation,
        )),
      ),
    )),

    // Same as dynamic_identifier but with higher precedence for use in member_access,
    // so tree-sitter sees a real GLR conflict instead of resolving via precedence
    _member_dynamic_identifier: $ => prec.dynamic(1, prec.right(PREC.MEMBER_ACCESS, choice(
      seq(
        // Unlike variable names, property names may also *start* with a digit (`obj.2a%k%`)
        choice($.identifier, alias($._numeric_property_name, $.identifier)),
        $.dereference_operation,
        repeat(choice(
          $.identifier,
          alias($._numeric_property_name, $.identifier),
          $.dereference_operation)),
      ),
      seq(
        $.dereference_operation,
        repeat1(choice(
          $.identifier,
          alias($._numeric_property_name, $.identifier),
          $.dereference_operation,
        )),
      ),
    ))),

    // The "maybe" operator: a postfix `?` permitting its operand to be unset.
    // Syntactically it just wraps the immediately-preceding operand; the
    // short-circuit semantics are a runtime concern and are not modelled here.
    // The operand is restricted to the things that can legally precede `?`:
    // a variable, a property/member access, an index access, or a call.
    optional_expression: $ => prec.right(PREC.MAYBE, seq(
      field('operand', choice(
        $.identifier,
        $.member_access,
        $.index_access,
        $.function_call,
        // A parenthesized sub-expression may also be made optional: `(a ?? b)?.c`
        $.parenthesized_expression,
      )),
      $.optional_marker,
    )),

    assignment_operator: $ =>
      choice( ':=', '+=', '-=', '*=', '/=', '//=', '.=', '|=', '&=', '^=', '>>=', '<<=', '>>>=', '??='),

    arrow: $ => '=>',

    //# endregion

    //# region Function-like

    // Maybe "subscript access", the docs call it index access
    // See https://www.autohotkey.com/docs/v2/Variables.htm#square-brackets
    function_call: $ => prec(PREC.OVERRIDE, seq(
      field('function', $._single_expression),
      token.immediate('('),
      field('arguments', optional($.arg_sequence)),
      ')',
    )),

    // MsgBox "Hello", "Example", "IconI OK"
    // Can only be used as a statement (not in expressions)
    call_statement: $ => prec.right(PREC.OVERRIDE, seq(
      // Only simple identifiers and object members for command-style.
      // `true`/`false` are built-in variables (lexed as boolean_literal), so a bare
      // `false` on a line is a command-style call of that variable - the interpreter
      // parses it as `false()` (a runtime error, but syntactically valid). Bare numeric
      // and string literals, by contrast, are load-time errors ("does not contain a
      // recognized action") and are correctly rejected.
      field('function', choice(
        $.identifier,
        $.member_access,
        $.boolean_literal,
      )),
      field('arguments', optional($.arg_sequence)),
      $._eol,
    )),

    _arg: $ => choice(
      $._single_expression,
      $.empty_arg,
    ),

    arg_sequence: $ => prec.right(choice(
      // Args without expansion
      seq(
        $._arg,
        repeat(seq(',', $._arg)),
        /**
         * A trailing comma is allowed but ignored - you can test this
         *    Function(params*) => MsgBox(params.length)
         *    Function(1,) ; "1"
         */
        optional(','),
      ),
      // Only the *last* argument may be expanded, hence the separate alternatives rather
      // than admitting array_expansion_operation as an ordinary `_arg`. They share the
      // `_arg (',' _arg)*` prefix with the branch above so that LALR can defer the decision
      // to the marker itself.
      // Single arg with expansion
      $.array_expansion_operation,
      // Multiple args with last one having expansion
      seq(
        $._arg,
        repeat(seq(',', $._arg)),
        ',',
        $.array_expansion_operation,
      ),
    )),

    // Postfix `*`, which expands an iterable into the enclosing argument list or array
    // literal. array_expansion_marker is produced by the external scanner, which
    // disambiguates it from the multiplication operator by looking ahead for ')' or ']'.
    array_expansion_operation: $ => prec.right(PREC.POSTFIX, seq(
      field('operand', $._single_expression),
      $.array_expansion_marker,
    )),

    //# region Function Declarations
    fat_arrow_function: $ => prec(PREC.FAT_ARROW_FUNCTION, seq(
      $._fat_arrow_function_head,
      $.arrow,
      field('body', $._single_expression),
    )),

    _fat_arrow_function_head: $ => choice(
      // named fat arrow function: `Sum(a, b) => a + b`
      seq(
        field('name', $.identifier),
        field('head', alias($._immediate_function_head, $.function_head)),
      ),
      // anonymous
      field('head', choice(
        $.function_head, // (a, b) => a + b
        $.identifier, // parentheses optional if only one arg, e.g. `a => a + 1`
      )),
    ),


    // v2.1 (alpha.3+): a function defined within an expression. Unlike the statement-level
    // function_declaration, this is markerless — it is disambiguated from a function_call by
    // GLR (a call can never be followed by a `{` in expression position), so the scanner's
    // _function_def_marker is intentionally NOT involved. This keeps `if f() {` parsing as a
    // call plus the if-body block, rather than a function expression as the condition.
    // The name is optional; the body is always a block (the `=>` form is fat_arrow_function).
    //
    // There are two body forms, distinguished by the scanner's _otb_brace marker (emitted only
    // when the `{` is on the same line as the `)`):
    //   - OTB body (`_otb_brace` + block): the AHK "one true brace" form. prec.dynamic(-1) lets
    //     it win over a following standalone block (`cb := f() { ... }` is a function
    //     expression), while still losing to a control-flow body block (`if (x) { }` is a
    //     parenthesized condition plus the if-body, not an anonymous function expression).
    //   - newline body (plain block): the `{` is on a later line. AHK only treats this as a
    //     function body when the function is enclosed in `()`/`[]`/`{}` (no standalone block can
    //     follow there); unenclosed, it is a call plus a separate block. We cannot detect
    //     enclosure, so this form is heavily penalized (prec.dynamic(-20)) — it loses to a
    //     standalone block wherever one can follow (the unenclosed case) but still parses when
    //     nothing competes (the enclosed case).
    function_declaration: $ => seq(
      $._function_def_marker,
      optional(field('scope', $.scope_identifier)),
      field('name', $.identifier),
      field('head', $.function_head),
      field('body', $.function_body),
    ),

    function_body: $ => choice(
      $.block,
      seq('=>', $._single_expression),
    ),

    function_head: $ => seq(
      '(',
      optional(choice($.wildcard, $.param_sequence)),
      ')',
    ),

    // "formal parameter list"
    param_sequence: $ => choice(
      // Just a variadic parameter: (params*)
      $.variadic_param,
      // One or more regular params, optionally followed by a variadic or wildcard: (a, b, rest*)
      seq(
        choice($._param, $.byref_param),
        repeat(seq(',', choice($._param, $.byref_param))),
        optional(choice(
          seq(',', $.variadic_param),
          seq(',', $.wildcard),
        )),
      ),
    ),

    _param: $ => choice(
      $.identifier,
      $.optional_param,
      $.default_param,
    ),

    // A parameter may be marked optional with the maybe operator (name?). Unlike a
    // general optional_expression, a parameter name is only ever a bare identifier.
    // Shares PREC.MAYBE with optional_expression so the reduce/reduce on `(a?)`
    // is a genuine conflict resolved by GLR (see conflicts), not by precedence.
    optional_param: $ => prec.right(PREC.MAYBE, seq(field('name', $.identifier), $.optional_marker)),

    integer_literal: $ => token(/([0-9]+)/),

    boolean_literal: $ => token(
      prec(PREC.KEYWORD, choice(/true/i, /false/i)),
    ),

    string_literal: $ => choice(
      token(/"([^"`\r\n]|`[^\r\n\t])*"/),
      token(/'([^'`\r\n]|`[^\r\n\t])*'/),
    ),

    // The elements are an arg_sequence rather than an expression_sequence: an array literal
    // takes exactly what an argument list takes, including elided elements (`[1,,3]`) and a
    // trailing array expansion (`[a, rest*]`), neither of which is an expression.
    object_literal: $ => seq('{', optional($._object_literal_member_sequence), '}'),

    _object_literal_member_sequence: $ => seq(
      $.object_literal_member,
      repeat(seq(',', $.object_literal_member)),
      // like arg sequences, trailing commas allowed and ignored
      optional(','),
    ),

    object_literal_member: $ => seq(
      field('key', choice(
        $.identifier,
        alias($._numeric_property_name, $.identifier),
        $.dynamic_identifier,
        $.dereference_operation,
      )),
      ':',
      field('value', $._single_expression)),

    //# endregion

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    // AHK allows property and method names, but not variable names, to begin with a digit
    // https://www.autohotkey.com/docs/alpha/Concepts.htm#names
    _numeric_property_name: $ => token(/[0-9][a-zA-Z0-9_]*/),

    // Note: not strictly "modifiers" because declaring one can switch a function into assume-local/global mode
    scope_identifier: $ => token(
      prec(PREC.KEYWORD, choice(
        /static/i,
        /local/i,
        /global/i,
      ))),

    //# region Continuation Sections

    _block_body: $ => seq($._statement, optional($._block_body)),

    block: $ => seq(
      '{', optional($._block_body), '}',
    ),

    return_statement: $ => prec.right(PREC.DEFAULT,
      seq(
        $.return,
        optional(seq($._value_start, field('value', $._single_expression))),
      ),
    ),

    return: $ => kwtok(/return/i),
