test/corpus/expression-sequences.txt
================================================================================
Single line expression sequence
================================================================================

one := 1, two := 2

--------------------------------------------------------------------------------

(source_file
  (expression_sequence
    (assignment_operation
      (identifier)
      (assignment_operator)
      (integer_literal))
    (assignment_operation
      (identifier)
      (assignment_operator)
      (integer_literal))))

================================================================================
Single line expression sequence with scope modifier
================================================================================

local one := 1, two := 2

--------------------------------------------------------------------------------

(source_file
  (variable_declaration
    (scope_identifier)
    (variable_declarator
      (identifier)
      (assignment_operator)
      (integer_literal))
    (variable_declarator
      (identifier)
      (assignment_operator)
      (integer_literal))))

================================================================================
Parenthesized expression sequence as assignment
================================================================================

var := (one := 1, one)

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (expression_sequence
      (assignment_operation
        (identifier)
        (assignment_operator)
        (integer_literal))
      (identifier))))

================================================================================
Multiline parenthesized expression sequence as assignment
================================================================================

var := (
    one := 1, 
    two += 2)

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (expression_sequence
      (assignment_operation
        (identifier)
        (assignment_operator)
        (integer_literal))
      (assignment_operation
        (identifier)
        (assignment_operator)
        (integer_literal)))))

================================================================================
Parenthesized expression sequence with math
================================================================================

var := (two := 2, two + two)

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (expression_sequence
      (assignment_operation
        (identifier)
        (assignment_operator)
        (integer_literal))
      (additive_operation
        (identifier)
        (identifier)))))

================================================================================
Expression sequence as math operand
================================================================================

val := 2 + (one := 1, two := 2, one + two)

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (additive_operation
      (integer_literal)
      (expression_sequence
        (assignment_operation
          (identifier)
          (assignment_operator)
          (integer_literal))
        (assignment_operation
          (identifier)
          (assignment_operator)
          (integer_literal))
        (additive_operation
          (identifier)
          (identifier))))))

================================================================================
Top-level expression sequences must start with primary expressions
:error
================================================================================

1 + 1, 2 + 2

--------------------------------------------------------------------------------
