test/corpus/function-calls.txt
================================================================================
Simple call
================================================================================

MsgBox("Hello, World!")

--------------------------------------------------------------------------------

(source_file
  (function_call
    (identifier)
    (arg_sequence
      (string_literal))))

================================================================================
Simple call statement
================================================================================

MsgBox "Hello, World!"

--------------------------------------------------------------------------------

(source_file
  (call_statement
    (identifier)
    (arg_sequence
      (string_literal))))

================================================================================
Function call with multiple arguments
================================================================================

MsgBox("Hello, World!", A_ScriptName, "Iconi OK")

--------------------------------------------------------------------------------

(source_file
  (function_call
    (identifier)
    (arg_sequence
      (string_literal)
      (identifier)
      (string_literal))))

================================================================================
Function call empty argument
================================================================================

Function(, "Second argument")
--------------------------------------------------------------------------------

(source_file
  (function_call
    (identifier)
    (arg_sequence
      (empty_arg)
      (string_literal))))

================================================================================
Call statement with empty argument
================================================================================

Function , "Second argument"

--------------------------------------------------------------------------------

(source_file
  (call_statement
    (identifier)
    (arg_sequence
      (empty_arg)
      (string_literal))))

================================================================================
Function call with trailing comma
================================================================================

Function(,)

--------------------------------------------------------------------------------

(source_file
  (function_call
    (identifier)
    (arg_sequence
      (empty_arg))))

================================================================================
Call statement with trailing comma
================================================================================

Function , 

--------------------------------------------------------------------------------

(source_file
  (call_statement
    (identifier)
    (arg_sequence
      (empty_arg))))

================================================================================
Function call empty argument on its own line
================================================================================

Function("First",
    ,
    "Third")

--------------------------------------------------------------------------------

(source_file
  (function_call
    (identifier)
    (arg_sequence
      (string_literal)
      (empty_arg)
      (string_literal))))

================================================================================
Call statement empty argument on a leading-comma continuation line
================================================================================

Function "First",
    ,
    , "Fourth"

--------------------------------------------------------------------------------

(source_file
  (call_statement
    (identifier)
    (arg_sequence
      (string_literal)
      (empty_arg)
      (empty_arg)
      (string_literal))))

================================================================================
Leading-comma continuation of a call statement is not an empty argument
================================================================================

MsgBox "First"
    , "Second"

--------------------------------------------------------------------------------

(source_file
  (call_statement
    (identifier)
    (arg_sequence
      (string_literal)
      (string_literal))))

================================================================================
Call statement with multiple arguments
================================================================================

MsgBox "Hello, World!", A_ScriptName, "Iconi OK"

--------------------------------------------------------------------------------

(source_file
  (call_statement
    (identifier)
    (arg_sequence
      (string_literal)
      (identifier)
      (string_literal))))

================================================================================
Function call with arguments accross multiple lines
================================================================================

MsgBox(
    "Hello, World!", 
    A_ScriptName, 
    "Iconi OK"
)

--------------------------------------------------------------------------------

(source_file
  (function_call
    (identifier)
    (arg_sequence
      (string_literal)
      (identifier)
      (string_literal))))

================================================================================
Chained function calls
================================================================================

First().Second().Third()

--------------------------------------------------------------------------------

(source_file
  (function_call
    (member_access
      (function_call
        (member_access
          (function_call
            (identifier))
          (identifier)))
      (identifier))))

================================================================================
Chained function calls multiline
================================================================================

First().Second().Third()

--------------------------------------------------------------------------------

(source_file
  (function_call
    (member_access
      (function_call
        (member_access
          (function_call
            (identifier))
          (identifier)))
      (identifier))))

================================================================================
Method call
================================================================================

obj.Method(1, 2)

--------------------------------------------------------------------------------

(source_file
  (function_call
    (member_access
      (identifier)
      (identifier))
    (arg_sequence
      (integer_literal)
      (integer_literal))))

================================================================================
Method call statement
================================================================================

obj.Method 1, 2

--------------------------------------------------------------------------------

(source_file
  (call_statement
    (member_access
      (identifier)
      (identifier))
    (arg_sequence
      (integer_literal)
      (integer_literal))))

================================================================================
Call with dynamic identifier
================================================================================

%object%(1, 2)

--------------------------------------------------------------------------------

(source_file
  (function_call
    (dereference_operation
      (identifier))
    (arg_sequence
      (integer_literal)
      (integer_literal))))

================================================================================
Function call with dynamic identifier with literal prefix
================================================================================

my%prop%(1, 2)

--------------------------------------------------------------------------------

(source_file
  (function_call
    (dynamic_identifier
      (identifier)
      (dereference_operation
        (identifier)))
    (arg_sequence
      (integer_literal)
      (integer_literal))))

================================================================================
Function call with dynamic identifier with literal suffix
================================================================================

%prop%handler(1, 2)

--------------------------------------------------------------------------------

(source_file
  (function_call
    (dynamic_identifier
      (dereference_operation
        (identifier))
      (identifier))
    (arg_sequence
      (integer_literal)
      (integer_literal))))

================================================================================
Method call with dynamic identifier with literal prefix
================================================================================

obj.my%prop%(1, 2)

--------------------------------------------------------------------------------

(source_file
  (function_call
    (member_access
      (identifier)
      (dynamic_identifier
        (identifier)
        (dereference_operation
          (identifier))))
    (arg_sequence
      (integer_literal)
      (integer_literal))))

================================================================================
Method call with dynamic identifier with literal suffix
================================================================================

obj.%prop%handler(1, 2)

--------------------------------------------------------------------------------

(source_file
  (function_call
    (member_access
      (identifier)
      (dynamic_identifier
        (dereference_operation
          (identifier))
        (identifier)))
    (arg_sequence
      (integer_literal)
      (integer_literal))))

================================================================================
Method call with dynamic identifier with both prefix and suffix
================================================================================

obj.my%a%c(args)

--------------------------------------------------------------------------------

(source_file
  (function_call
    (member_access
      (identifier)
      (dynamic_identifier
        (identifier)
        (dereference_operation
          (identifier))
        (identifier)))
    (arg_sequence
      (identifier))))

================================================================================
Call statement with no arguments
================================================================================

Critical

--------------------------------------------------------------------------------

(source_file
  (call_statement
    (identifier)))

================================================================================
Bare call statement does not swallow the next line
================================================================================

f() {
    ExitApp
    x := 1
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (function_head)
    (function_body
      (block
        (call_statement
          (identifier))
        (assignment_operation
          (identifier)
          (assignment_operator)
          (integer_literal))))))

================================================================================
Bare call statement before a closing brace
================================================================================

f() {
    Reload
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (function_head)
    (function_body
      (block
        (call_statement
          (identifier))))))

================================================================================
Multiple bare call statements in a row
================================================================================

Send "a"
ExitApp
Reload

--------------------------------------------------------------------------------

(source_file
  (call_statement
    (identifier)
    (arg_sequence
      (string_literal)))
  (call_statement
    (identifier))
  (call_statement
    (identifier)))

================================================================================
Bare true/false literal statement is a command-style call
================================================================================

f() {
    false
    true
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (function_head)
    (function_body
      (block
        (call_statement
          (boolean_literal))
        (call_statement
          (boolean_literal))))))

================================================================================
Bare false does not swallow the next line
================================================================================

f() {
    false
    x := 1
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (function_head)
    (function_body
      (block
        (call_statement
          (boolean_literal))
        (assignment_operation
          (identifier)
          (assignment_operator)
          (integer_literal))))))

================================================================================
Bare numeric literal statement is an error
:error
================================================================================

f() {
    42
}

--------------------------------------------------------------------------------



================================================================================
Bare string literal statement is an error
:error
================================================================================

f() {
    "hello"
}

--------------------------------------------------------------------------------



================================================================================
Multiplication is not confused for array expansion
================================================================================

StrGet(2*pos)

--------------------------------------------------------------------------------

(source_file
  (function_call
    (identifier)
    (arg_sequence
      (multiplicative_operation
        (integer_literal)
        (identifier)))))

================================================================================
Multiplication is not confused for array expansion multiline
================================================================================

StrGet(
  2*pos
)

--------------------------------------------------------------------------------

(source_file
  (function_call
    (identifier)
    (arg_sequence
      (multiplicative_operation
        (integer_literal)
        (identifier)))))

================================================================================
Multiplication is not confused for array expansion with more complex arguments
================================================================================

; Real code!
StrGet(StrPtr(str) + 2*pos, 1)

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (function_call
    (identifier)
    (arg_sequence
      (additive_operation
        (function_call
          (identifier)
          (arg_sequence
            (identifier)))
        (multiplicative_operation
          (integer_literal)
          (identifier)))
      (integer_literal))))

================================================================================
Optional argument default
================================================================================

; Ensure switch statement parsing doesn't interfere with identifiers
return super.Get(key, default?)

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (return_statement
    (return)
    (function_call
      (member_access
        (identifier)
        (identifier))
      (arg_sequence
        (identifier)
        (optional_expression
          (identifier)
          (optional_marker))))))

================================================================================
Optional argument default in complex statement
================================================================================

; Ensure switch statement parsing doesn't interfere with identifiers
Array.Prototype.DefineProp("FirstOrDefault", { Call: (this, condition?, default?) => ArrayExtensions.FirstOrDefault(this, condition?, default?) })
--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (function_call
    (member_access
      (member_access
        (identifier)
        (identifier))
      (identifier))
    (arg_sequence
      (string_literal)
      (object_literal
        (object_literal_member
          (identifier)
          (fat_arrow_function
            (function_head
              (param_sequence
                (identifier)
                (optional_param
                  (identifier)
                  (optional_marker))
                (optional_param
                  (identifier)
                  (optional_marker))))
            (arrow)
            (function_call
              (member_access
                (identifier)
                (identifier))
              (arg_sequence
                (identifier)
                (optional_expression
                  (identifier)
                  (optional_marker))
                (optional_expression
                  (identifier)
                  (optional_marker))))))))))

================================================================================
Function call with array expansion
================================================================================

Func(params*)

--------------------------------------------------------------------------------

(source_file
  (function_call
    (identifier)
    (arg_sequence
      (array_expansion_operation
        (identifier)
        (array_expansion_marker)))))

================================================================================
Function call with multiple arguments and array expansion
================================================================================

Func(a, b, rest*)

--------------------------------------------------------------------------------

(source_file
  (function_call
    (identifier)
    (arg_sequence
      (identifier)
      (identifier)
      (array_expansion_operation
        (identifier)
        (array_expansion_marker)))))

================================================================================
Function call with an expanded expression
================================================================================

Func(obj.items*)

--------------------------------------------------------------------------------

(source_file
  (function_call
    (identifier)
    (arg_sequence
      (array_expansion_operation
        (member_access
          (identifier)
          (identifier))
        (array_expansion_marker)))))

================================================================================
Array expansion is only allowed on the last argument
:error
================================================================================

Func(a*, b)

--------------------------------------------------------------------------------


